Correct some errors in CSS.  Rename .ball_wrap to ball-wrap.

--- a/css/styles.css
+++ b/css/styles.css
@@ -522,7 +522,7 @@ img::-moz-selection {
 }
 
 .navbar-default .navbar-brand:hover,
-navbar-default .navbar-brand:focus {
+.navbar-default .navbar-brand:focus {
     color: grey;
 }
 
@@ -577,79 +577,28 @@ navbar-default .navbar-brand:focus {
 
 /*PAGE 1 CLASSES START*/
 
-.ball_wrap {
-    width: 500px;
-    position: relative;
-    margin: auto;
-    display: table;
-}
 
-.ball_wrap .shapewrap:nth-of-type(1) {
-    left: -10px;
-    bottom: -80px;
-}
-.ball_wrap .shapewrap:nth-of-type(2) {
-    left: 55px;
-    bottom: -215px;
-}
-.ball_wrap .shapewrap:nth-of-type(3) {
-    left: 229px;
-    bottom: -297px;
-}
-
-.ball_wrap .shapewrap:nth-of-type(3) .globe .globe-text {
-    left: -11px;
-    top: 6px;
-}
-
-
-
-
-
-.ball_wrap .shapewrap:nth-of-type(4) {
-    left: 468px;
-    bottom: -80px;
-}
-
-.ball_wrap .shapewrap:nth-of-type(4) .globe .globe-text {
-    left: 50px;
-}
-.ball_wrap .shapewrap:nth-of-type(5) {
-    left: 420px;
-    bottom: -215px;
-}
-
-.ball_wrap .shapewrap:nth-of-type(5) .globe .globe-text {
-    left: 50px
-}
-
-.ball_wrap .shapewrap:nth-of-type(6) {
-    left: 438px;
-    bottom: -236px;
-
-}
-
-.ball_wrap1 a:nth-of-type(1) {
+.ball-wrap a:nth-of-type(1) {
     left: -90px;
     top: 15px;
 }
 
-.ball_wrap1 a:nth-of-type(2) {
+.ball-wrap a:nth-of-type(2) {
     top: 132px;
     left: -75px;
 }
 
-.ball_wrap1 a:nth-of-type(3) {
+.ball-wrap a:nth-of-type(3) {
     top: 192px;
     left: 150px;
 }
 
-.ball_wrap1 a:nth-of-type(4) {
+.ball-wrap a:nth-of-type(4) {
     top: 132px;
     right: -58px;
 }
 
-.ball_wrap1 a:nth-of-type(5) {
+.ball-wrap a:nth-of-type(5) {
     top: 15px;
     right: -157px;
 }
